--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon server/server.js",
+    "dev": "nodemon server.js",
     "build": "npm install && npm install --prefix auth-frontend && npm run build --prefix auth-frontend",
     "start": "nodemon server.js"
   },
