--- a/vercel.json
+++ b/vercel.json
@@ -3,14 +3,14 @@
   "name": "Auth-System",
   "builds": [
     {
-      "src": "./index.js",
+      "src": "./server.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/.*",
-      "dest": "index.js"
+      "dest": "auth.js"
     }
   ]
 }
